<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.mightyfrog.android.palette.MainActivity">

    <item
        android:id="@+id/action_palette_size"
        android:icon="@drawable/ic_palette"
        android:title="@string/action_palette_size"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_palette_size_8"
                android:checkable="true"
                android:title="@string/palette_size_8" />

            <item
                android:id="@+id/action_palette_size_16"
                android:checkable="true"
                android:title="@string/palette_size_16" />

            <item
                android:id="@+id/action_palette_size_24"
                android:checkable="true"
                android:title="@string/palette_size_24" />
        </menu>
    </item>

</menu>
