<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dominant_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/dominant"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dominant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp" />

    <TextView
        android:id="@+id/lvibrant_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/lvibrant"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lvibrant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp" />

    <TextView
        android:id="@+id/vibrant_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/vibrant"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/vibrant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp" />

    <TextView
        android:id="@+id/dvibrant_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/dvibrant"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dvibrant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp" />

    <TextView
        android:id="@+id/lmuted_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/lmuted"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lmuted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp" />

    <TextView
        android:id="@+id/muted_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/muted"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/muted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp" />

    <TextView
        android:id="@+id/dmuted_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/dmuted"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dmuted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp" />

</LinearLayout>
